imp: 修复 JSONDecode 的 bug