@@ -37,8 +37,8 @@
                     <source>11</source>
                     <target>11</target>
                     <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
